[package]
name = "telegram-rustreactions-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
demoji = "0.0.3"
derive_more = "0.99"
emojito = "0.3.5"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.34", features = ["rt-multi-thread", "macros"] }
